tests/expectations/parser/structs/comma_separators_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370041]: Each member declaration in a struct or record must be followed by a comma (except the last).
    --> test:5:9
     |
   5 |         y: u8
     |         ^"""]
